force-app/main/default/objects/Product_Instance_Usage__c/Product_Instance_Usage__c.object-meta.xml
<CustomObject>
    <label>Product Instance Usage</label>
    <nameField>
        <displayFormat>Usage-{00000}</displayFormat>
        <label>Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Instances Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>