force-app/main/default/objects/Product_Instance_Usage__c/fields/Product_Instance__c.field-meta.xml
<CustomField>
    <fullName>Product_Instance__c</fullName>
    <label>Product Instance</label>
    <referenceTo>Product_Instance__c</referenceTo>
    <relationshipLabel>Product Instances Usage</relationshipLabel>
    <relationshipName>Product_Instances_Usage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>