force-app/main/default/objects/Product_Instance_Usage__c/fields/Usage_Period__c.field-meta.xml
<CustomField>
    <fullName>Usage_Period__c</fullName>
    <label>Usage Period</label>
    <type>DateTime</type>
</CustomField>